<resources>
    <string name="app_name">MontyHall</string>
    <string name="change_stat_title">Менять</string>
    <string name="not_change_stat_title">Не менять</string>
    <string name="first_door">Первая дверь</string>
    <string name="second_door">Вторая дверь</string>
    <string name="third_door">Третья дверь</string>
    <string name="clearStatButton">Сбросить статистику</string>
    <string name="alert_title">Шаг 2</string>
    <string name="alert_message_first">Дверь</string>
    <string name="alert_message_second">пустая. Не хотите поменять свой выбор?</string>
    <string name="alert_pos_button">Да</string>
    <string name="alert_neg_button">Нет</string>
    <string name="endgame_toast_begin">Вы</string>
    <string name="endgame_toast_win">выиграли!</string>
    <string name="endgame_toast_lose">проиграли!</string>
    <string name="alert_clear_title">Подтвердите сброс статистики</string>
    <string name="alert_clear_message">Сбросить статистику?</string>
    <string name="autoplay_activity_btn">Автоплей</string>
    <string name="auto_play_start">Начать</string>
    <string name="back_btn">Назад</string>
</resources>
