<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="163dp"
            android:layout_height="match_parent"
            android:text="@string/change_stat_title"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/changedStat"
            android:layout_width="248dp"
            android:layout_height="match_parent"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="163dp"
            android:layout_height="match_parent"
            android:text="@string/not_change_stat_title"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/notChangedStat"
            android:layout_width="248dp"
            android:layout_height="match_parent"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/doorGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <RadioButton
            android:id="@+id/firstDoor"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/first_door"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/secondDoor"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/second_door"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/thirdDoor"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/third_door"
            android:textSize="24sp" />

    </RadioGroup>

    <Button
        android:id="@+id/clearBtn"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clearStatButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>